add dynamic images/ convert json to c# object

--- a/WeatherApp/MainWindow.xaml
+++ b/WeatherApp/MainWindow.xaml
@@ -5,8 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeatherApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="512" Width="1024"
+        ResizeMode="NoResize"
+        >
+    <!-- we determine the height and width because of the image size, we add ResizeMode = "NoResize" -->
 
+    <!--x:Name = "varName" for make the element accessible, for e.g. ImageSource="AppName;component/folder/file.png" -->
+    <Grid>
+        <Grid.Background>
+            <ImageBrush x:Name="backgroundImage" ImageSource="/WeatherApp;component/Images/Sun.png">
+                
+            </ImageBrush>
+        </Grid.Background>
     </Grid>
 </Window>
