--- a/WeatherApp/MainWindow.xaml
+++ b/WeatherApp/MainWindow.xaml
@@ -8,6 +8,59 @@
         Title="MainWindow" Height="512" Width="1024"
         ResizeMode="NoResize"
         >
+    <Window.Resources>
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <!-- we determine the height and width because of the image size, we add ResizeMode = "NoResize" -->
 
     <!--x:Name = "varName" for make the element accessible, for e.g. ImageSource="AppName;component/folder/file.png" -->
@@ -40,6 +93,10 @@
 
             <RowDefinition Height="20"></RowDefinition>
 
+            <RowDefinition Height="50">
+                
+            </RowDefinition>
+            
             <RowDefinition>
                 
             </RowDefinition>
@@ -60,22 +117,32 @@
             <ImageBrush x:Name="backgroundImage" ImageSource="/WeatherApp;component/Images/Sun.png">
             </ImageBrush>
         </Grid.Background>
-        <Label x:Name="labelTemperature" Grid.Row="2" Grid.Column="1" Content="40°C" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="100" FontWeight="Bold" Foreground="White">
+        <Label x:Name="labelTemperature" Grid.Row="3" Grid.Column="1" Content="40°C" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="100" FontWeight="Bold" Foreground="White">
             <Label.Effect>
                 <DropShadowEffect ShadowDepth="5" BlurRadius="1" Color="Black" Opacity="0.95" />
             </Label.Effect>
         </Label>
         
-        <Label x:Name="labelInfo" Grid.Row="3" Grid.Column="1" Content="Cloudy" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="35" FontWeight="Bold" Foreground="White" VerticalAlignment="Top">
+        <Label x:Name="labelInfo" Grid.Row="4" Grid.Column="1" Content="Cloudy" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="35" FontWeight="Bold" Foreground="White" VerticalAlignment="Top">
             <Label.Effect>
                 <DropShadowEffect ShadowDepth="3" BlurRadius="1" Color="Black" Opacity="0.95" />
             </Label.Effect>
         </Label> 
         
-        <Label x:Name="labelDescription" Grid.Row="3" Grid.Column="2" Content="Clear Sky" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="35" FontWeight="Bold" Foreground="White" VerticalAlignment="Top">
+        <Label x:Name="labelDescription" Grid.Row="4" Grid.Column="2" Content="Clear Sky" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="35" FontWeight="Bold" Foreground="White" VerticalAlignment="Top">
             <Label.Effect>
                 <DropShadowEffect ShadowDepth="3" BlurRadius="1" Color="Black" Opacity="0.95" />
             </Label.Effect>
         </Label>
+
+        <Border Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Padding="5" CornerRadius="25" BorderThickness="1" Background="white">
+            <TextBox x:Name="textBoxQuery" Text="Koblenz" Background="Transparent" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontWeight="Bold" />
+        </Border>
+        
+        <Border Grid.Row="1" Grid.Column="4" Padding="5" CornerRadius="10" BorderThickness="1" Background="white">
+            <Button Click="Button_Click" Style="{DynamicResource ButtonStyle1}" Cursor="Hand" Background="Transparent" BorderThickness="0" Content="Update" FontSize="20"></Button>
+        </Border>
+        
+        
     </Grid>
 </Window>
